Added Badge test, Changed Rule structure
