# Part2/swagger/spring-server/src/main/resources/api-spec.yaml
@@ -166,12 +166,30 @@ paths:
 
 definitions:
   Rule:
-    allOf:
-      - properties:
-          id:
+    type: object
+    properties:
+      id:
+        type: integer
+        format: int64
+      if:
+        type: object
+        properties:
+          type:
+            type: string
+      then:
+        type: object
+        properties:
+          awardBadgeId:
             type: integer
             format: int64
-      - $ref: '#/definitions/RuleWithoutId'
+          awardPoints:
+            type: object
+            properties:
+              pointScaleId:
+                type: integer
+                format: int64
+              amount:
+                type: integer
   RuleWithoutId:
     type: object
     properties:
